automata/parser01.automaton
State 0:
## Known stack suffix:
##
## LR(1) items:
program' -> . program [ # ]
## Transitions:
-- On LPAREN shift to state 1
-- On INT shift to state 2
-- On IF shift to state 3
-- On program shift to state 23
-- On expr2 shift to state 17
-- On expr1 shift to state 24
## Reductions:

State 1:
## Known stack suffix:
## LPAREN
## LR(1) items:
expr2 -> LPAREN . expr1 RPAREN [ RPAREN PLUS MUL EOF ELSE ]
## Transitions:
-- On LPAREN shift to state 1
-- On INT shift to state 2
-- On IF shift to state 3
-- On expr2 shift to state 17
-- On expr1 shift to state 21
## Reductions:

State 2:
## Known stack suffix:
## INT
## LR(1) items:
expr1 -> INT . [ RPAREN PLUS MUL EOF ]
## Transitions:
## Reductions:
-- On RPAREN PLUS MUL EOF
--   reduce production expr1 -> INT

State 3:
## Known stack suffix:
## IF
## LR(1) items:
expr1 -> IF . cond_expr1 THEN expr1 [ RPAREN PLUS MUL EOF ]
expr2 -> IF . cond_expr1 THEN expr2 ELSE expr2 [ RPAREN PLUS MUL EOF ELSE ]
## Transitions:
-- On TRUE shift to state 4
-- On FALSE shift to state 5
-- On cond_expr1 shift to state 6
## Reductions:

State 4:
## Known stack suffix:
## TRUE
## LR(1) items:
cond_expr1 -> TRUE . [ THEN ]
## Transitions:
## Reductions:
-- On THEN
--   reduce production cond_expr1 -> TRUE

State 5:
## Known stack suffix:
## FALSE
## LR(1) items:
cond_expr1 -> FALSE . [ THEN ]
## Transitions:
## Reductions:
-- On THEN
--   reduce production cond_expr1 -> FALSE

State 6:
## Known stack suffix:
## IF cond_expr1
## LR(1) items:
expr1 -> IF cond_expr1 . THEN expr1 [ RPAREN PLUS MUL EOF ]
expr2 -> IF cond_expr1 . THEN expr2 ELSE expr2 [ RPAREN PLUS MUL EOF ELSE ]
## Transitions:
-- On THEN shift to state 7
## Reductions:

State 7:
## Known stack suffix:
## IF cond_expr1 THEN
## LR(1) items:
expr1 -> IF cond_expr1 THEN . expr1 [ RPAREN PLUS MUL EOF ]
expr2 -> IF cond_expr1 THEN . expr2 ELSE expr2 [ RPAREN PLUS MUL EOF ELSE ]
## Transitions:
-- On LPAREN shift to state 1
-- On INT shift to state 2
-- On IF shift to state 3
-- On expr2 shift to state 8
-- On expr1 shift to state 15
## Reductions:

State 8:
## Known stack suffix:
## IF cond_expr1 THEN expr2
## LR(1) items:
expr1 -> expr2 . [ RPAREN PLUS MUL EOF ]
expr2 -> IF cond_expr1 THEN expr2 . ELSE expr2 [ RPAREN PLUS MUL EOF ELSE ]
## Transitions:
-- On ELSE shift to state 9
## Reductions:
-- On RPAREN PLUS MUL EOF
--   reduce production expr1 -> expr2

State 9:
## Known stack suffix:
## IF cond_expr1 THEN expr2 ELSE
## LR(1) items:
expr2 -> IF cond_expr1 THEN expr2 ELSE . expr2 [ RPAREN PLUS MUL EOF ELSE ]
## Transitions:
-- On LPAREN shift to state 1
-- On IF shift to state 10
-- On expr2 shift to state 14
## Reductions:

State 10:
## Known stack suffix:
## IF
## LR(1) items:
expr2 -> IF . cond_expr1 THEN expr2 ELSE expr2 [ RPAREN PLUS MUL EOF ELSE ]
## Transitions:
-- On TRUE shift to state 4
-- On FALSE shift to state 5
-- On cond_expr1 shift to state 11
## Reductions:

State 11:
## Known stack suffix:
## IF cond_expr1
## LR(1) items:
expr2 -> IF cond_expr1 . THEN expr2 ELSE expr2 [ RPAREN PLUS MUL EOF ELSE ]
## Transitions:
-- On THEN shift to state 12
## Reductions:

State 12:
## Known stack suffix:
## IF cond_expr1 THEN
## LR(1) items:
expr2 -> IF cond_expr1 THEN . expr2 ELSE expr2 [ RPAREN PLUS MUL EOF ELSE ]
## Transitions:
-- On LPAREN shift to state 1
-- On IF shift to state 10
-- On expr2 shift to state 13
## Reductions:

State 13:
## Known stack suffix:
## IF cond_expr1 THEN expr2
## LR(1) items:
expr2 -> IF cond_expr1 THEN expr2 . ELSE expr2 [ RPAREN PLUS MUL EOF ELSE ]
## Transitions:
-- On ELSE shift to state 9
## Reductions:

State 14:
## Known stack suffix:
## IF cond_expr1 THEN expr2 ELSE expr2
## LR(1) items:
expr2 -> IF cond_expr1 THEN expr2 ELSE expr2 . [ RPAREN PLUS MUL EOF ELSE ]
## Transitions:
## Reductions:
-- On RPAREN PLUS MUL EOF ELSE
--   reduce production expr2 -> IF cond_expr1 THEN expr2 ELSE expr2

State 15:
## Known stack suffix:
## IF cond_expr1 THEN expr1
## LR(1) items:
expr1 -> expr1 . MUL expr1 [ RPAREN PLUS MUL EOF ]
expr1 -> expr1 . PLUS expr1 [ RPAREN PLUS MUL EOF ]
expr1 -> IF cond_expr1 THEN expr1 . [ RPAREN PLUS MUL EOF ]
## Transitions:
-- On PLUS shift to state 16
-- On MUL shift to state 19
## Reductions:
-- On RPAREN PLUS MUL EOF
--   reduce production expr1 -> IF cond_expr1 THEN expr1
** Conflict on PLUS MUL

State 16:
## Known stack suffix:
## expr1 PLUS
## LR(1) items:
expr1 -> expr1 PLUS . expr1 [ RPAREN PLUS MUL EOF ]
## Transitions:
-- On LPAREN shift to state 1
-- On INT shift to state 2
-- On IF shift to state 3
-- On expr2 shift to state 17
-- On expr1 shift to state 18
## Reductions:

State 17:
## Known stack suffix:
## expr2
## LR(1) items:
expr1 -> expr2 . [ RPAREN PLUS MUL EOF ]
## Transitions:
## Reductions:
-- On RPAREN PLUS MUL EOF
--   reduce production expr1 -> expr2

State 18:
## Known stack suffix:
## expr1 PLUS expr1
## LR(1) items:
expr1 -> expr1 . MUL expr1 [ RPAREN PLUS MUL EOF ]
expr1 -> expr1 . PLUS expr1 [ RPAREN PLUS MUL EOF ]
expr1 -> expr1 PLUS expr1 . [ RPAREN PLUS MUL EOF ]
## Transitions:
-- On PLUS shift to state 16
-- On MUL shift to state 19
## Reductions:
-- On RPAREN PLUS MUL EOF
--   reduce production expr1 -> expr1 PLUS expr1
** Conflict on PLUS MUL

State 19:
## Known stack suffix:
## expr1 MUL
## LR(1) items:
expr1 -> expr1 MUL . expr1 [ RPAREN PLUS MUL EOF ]
## Transitions:
-- On LPAREN shift to state 1
-- On INT shift to state 2
-- On IF shift to state 3
-- On expr2 shift to state 17
-- On expr1 shift to state 20
## Reductions:

State 20:
## Known stack suffix:
## expr1 MUL expr1
## LR(1) items:
expr1 -> expr1 . MUL expr1 [ RPAREN PLUS MUL EOF ]
expr1 -> expr1 MUL expr1 . [ RPAREN PLUS MUL EOF ]
expr1 -> expr1 . PLUS expr1 [ RPAREN PLUS MUL EOF ]
## Transitions:
-- On PLUS shift to state 16
-- On MUL shift to state 19
## Reductions:
-- On RPAREN PLUS MUL EOF
--   reduce production expr1 -> expr1 MUL expr1
** Conflict on PLUS MUL

State 21:
## Known stack suffix:
## LPAREN expr1
## LR(1) items:
expr1 -> expr1 . MUL expr1 [ RPAREN PLUS MUL ]
expr1 -> expr1 . PLUS expr1 [ RPAREN PLUS MUL ]
expr2 -> LPAREN expr1 . RPAREN [ RPAREN PLUS MUL EOF ELSE ]
## Transitions:
-- On RPAREN shift to state 22
-- On PLUS shift to state 16
-- On MUL shift to state 19
## Reductions:

State 22:
## Known stack suffix:
## LPAREN expr1 RPAREN
## LR(1) items:
expr2 -> LPAREN expr1 RPAREN . [ RPAREN PLUS MUL EOF ELSE ]
## Transitions:
## Reductions:
-- On RPAREN PLUS MUL EOF ELSE
--   reduce production expr2 -> LPAREN expr1 RPAREN

State 23:
## Known stack suffix:
## program
## LR(1) items:
program' -> program . [ # ]
## Transitions:
## Reductions:
-- On #
--   accept program

State 24:
## Known stack suffix:
## expr1
## LR(1) items:
expr1 -> expr1 . MUL expr1 [ PLUS MUL EOF ]
expr1 -> expr1 . PLUS expr1 [ PLUS MUL EOF ]
program -> expr1 . EOF [ # ]
## Transitions:
-- On PLUS shift to state 16
-- On MUL shift to state 19
-- On EOF shift to state 25
## Reductions:

State 25:
## Known stack suffix:
## expr1 EOF
## LR(1) items:
program -> expr1 EOF . [ # ]
## Transitions:
## Reductions:
-- On #
--   reduce production program -> expr1 EOF

